built MDX expressions parser for weird measures